# EraseX

./: PXE_BOOT_README.md  package-lock.json  package.json
secure_wipe/: .env  package-lock.json  package.json
secure_wipe/src/: About.tsx  App.css  App.tsx  BootableModal.tsx  BootablePage.tsx  FeaturesSection.tsx  GeofenceModal.tsx  LandingPage.tsx  Login.tsx  PxeBootModal.tsx  Register.tsx  SensitiveFiles.tsx  certificate-status.css  error-banner.css
secure_wipe/src-tauri/: Cargo.toml  tauri.conf.json
secure_wipe/src-tauri/migrations/: 20250101000000_create_certificates.sql  20250115000000_create_audit_certificates.sql  20250116000000_add_confirmation_pin.sql  20250909170659_create_users.sql  add_integrity_hash_to_audit_certificates.sql  add_status_to_certificates.sql
secure_wipe/src-tauri/src/: android_wipe.rs  bootable.rs  drive_filter.rs  geofence.rs  hdd.rs  iso_builder.rs  main.rs  open_audit.rs  pxe_server.rs  ssd.rs
y/: package-lock.json  package.json
y/src/: App.css
y/src-tauri/: Cargo.toml  tauri.conf.json
