[package]
name = "secure_wipe"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The _lib suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "secure_wipe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
uuid = { version = "1.3", features = ["v4"] }
machine-uid = "0.5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros", "chrono"] }
bcrypt = "0.15"
jsonwebtoken = "9.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
thiserror = "1.0"
dirs = "6.0.0"
sha2 = "0.10.9"
rand = "0.8"
rfd = "0.14"
printpdf = "0.6"
pdf-extract = "0.7"
iso9660 = "0.1"
flate2 = "1.0"
tokio-tungstenite = "0.20"
futures-util = "0.3"
once_cell = "1.19"
